update docker yml

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,5 @@ jobs:
       with:
         context: .
         push: true
-        tags: your_dockerhub_username/simple-web-app:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/simple-web-app:latest
+
