--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,12 +32,16 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Force ECS to pull latest image and redeploy
+      - name: Debug ECS settings
         run: |
           echo "Cluster: ${{ secrets.ECS_CLUSTER }}"
           echo "Service: ${{ secrets.ECS_SERVICE }}"
+          echo "Region: ${{ secrets.AWS_REGION }}"
+
+      - name: Force ECS to pull latest image and redeploy
+        run: |
           aws ecs update-service \
             --cluster ${{ secrets.ECS_CLUSTER }} \
             --service ${{ secrets.ECS_SERVICE }} \
-            --force-new-deployment
-
+            --force-new-deployment \
+            --region ${{ secrets.AWS_REGION }}
