--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION_01 }}
 
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
@@ -36,7 +36,7 @@ jobs:
         run: |
           echo "Cluster: ${{ secrets.ECS_CLUSTER }}"
           echo "Service: ${{ secrets.ECS_SERVICE }}"
-          echo "Region: ${{ secrets.AWS_REGION }}"
+          echo "Region: ${{ secrets.AWS_REGION_01 }}"
 
       - name: Force ECS to pull latest image and redeploy
         run: |
@@ -44,4 +44,4 @@ jobs:
             --cluster ${{ secrets.ECS_CLUSTER }} \
             --service ${{ secrets.ECS_SERVICE }} \
             --force-new-deployment \
-            --region ${{ secrets.AWS_REGION }}
+            --region ${{ secrets.AWS_REGION_01 }}
