--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,12 +36,7 @@ jobs:
         run: |
           echo "Cluster: ${{ secrets.ECS_CLUSTER }}"
           echo "Service: ${{ secrets.ECS_SERVICE }}"
+          echo "Region: ${{ secrets.AWS_REGION }}"
           echo "Region: ${{ secrets.AWS_REGION_01 }}"
 
-      - name: Force ECS to pull latest image and redeploy
-        run: |
-          aws ecs update-service \
-            --cluster ${{ secrets.ECS_CLUSTER }} \
-            --service ${{ secrets.ECS_SERVICE }} \
-            --force-new-deployment \
-            --region ${{ secrets.AWS_REGION_01 }}
+
