--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,14 +34,14 @@ jobs:
 
       - name: Debug ECS settings
         run: |
-          echo "Cluster: ${{ test-app-clusterR }}"
-          echo "Service: ${{ task-CI-app-service-woxcO6lu }}"
-          echo "Region: ${{ us-east-1 }}"
+          echo "Cluster: ${{ secrets.ECS_CLUSTER }}"
+          echo "Service: ${{ secrets.ECS_SERVICE }}"
+          echo "Region: ${{ secrets.AWS_REGION_01 }}"
 
       - name: Force ECS to pull latest image and redeploy
         run: |
           aws ecs update-service \
-            --cluster ${{ test-app-clusterR }} \
-            --service ${{ task-CI-app-service-woxcO6lu }} \
+            --cluster ${{ secrets.ECS_CLUSTER }} \
+            --service ${{ secrets.ECS_SERVICE }} \
             --force-new-deployment \
-            --region ${{ us-east-1 }}
+            --region ${{ secrets.AWS_REGION_01 }}
