--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,22 +32,14 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Debug ECS settings
+      - name: Print ECS Secrets for Debug
         run: |
-          echo "Cluster: ${{ secrets.ECS_CLUSTER }}"
-          echo "Service: ${{ secrets.ECS_SERVICE }}"
-          echo "Region: ${{ secrets.AWS_REGION }}"
+          echo "Debugging ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}"
+          echo "Debugging ECS_SERVICE: ${{ secrets.ECS_SERVICE }}"
+          echo "Debugging AWS_REGION: ${{ secrets.AWS_REGION }}"
 
       - name: List ECS services in cluster (to verify service name)
         run: |
           aws ecs list-services \
             --cluster ${{ secrets.ECS_CLUSTER }} \
-            --region ${{ secrets.AWS_REGION }}
-
-      - name: Force ECS to pull latest image and redeploy
-        run: |
-          aws ecs update-service \
-            --cluster ${{ secrets.ECS_CLUSTER }} \
-            --service ${{ secrets.ECS_SERVICE }} \
-            --force-new-deployment \
             --region ${{ secrets.AWS_REGION }}
