--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,8 @@
-name: Build & Deploy to ECS
+name: Build & Push to ECR
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
   deploy:
@@ -21,33 +20,20 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push Docker image to ECR
+      - name: Build, tag, and push image to ECR
         env:
           ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: latest
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          echo "Building Docker image..."
+          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+          
+          echo "Tagging Docker image..."
+          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          
+          echo "Pushing Docker image to ECR..."
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-      - name: Debug ECS settings
-        run: |
-          echo "Cluster: ${{ secrets.ECS_CLUSTER }}"
-          echo "Service: ${{ secrets.ECS_SERVICE }}"
-          echo "Region: ${{ secrets.AWS_REGION }}"
-
-      - name: List ECS services in cluster (to verify service name)
-        run: |
-          aws ecs list-services \
-            --cluster ${{ secrets.ECS_CLUSTER }} \
-            --region ${{ secrets.AWS_REGION }}
-
-      - name: Force ECS to pull latest image and redeploy
-        run: |
-          aws ecs update-service \
-            --cluster ${{ secrets.ECS_CLUSTER }} \
-            --service ${{ secrets.ECS_SERVICE }} \
-            --force-new-deployment \
-            --region ${{ secrets.AWS_REGION }}
