--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,3 +36,11 @@ jobs:
 
           echo "Pushing Docker image to ECR..."
           docker push $FULL_IMAGE_NAME
+          
+      - name: Force ECS to redeploy with latest image
+        run: |
+          aws ecs update-service \
+            --cluster ${{ secrets.ECS_CLUSTER }} \
+            --service ${{ secrets.ECS_SERVICE }} \
+            --force-new-deployment \
+            --region ${{ secrets.AWS_REGION }}
